--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project1-blockchain-udacity",
+  "name": "project_1",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project creates a Blockchain application to store data into the blocks",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,17 @@
     "type": "git",
     "url": "git+ssh://git@gitlab.com/delucas.david/project1-blockchain-udacity.git"
   },
-  "author": "",
+  "author": "David de Lucas - delucas.david@gmail.com",
   "license": "ISC",
+  "dependencies": {
+    "bitcoinjs-lib": "^4.0.5",
+    "bitcoinjs-message": "^2.1.0",
+    "body-parser": "^1.19.0",
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.17.1",
+    "hex2ascii": "0.0.3",
+    "morgan": "^1.9.1"
+  },
   "bugs": {
     "url": "https://gitlab.com/delucas.david/project1-blockchain-udacity/issues"
   },
